# RubixCuberSolver

./: CMakeLists.txt  GenericRubixCube.cpp  GenericRubixCube.h  Generic_Rubix_Cube_Solver.cpp  Generic_Rubix_Cube_Solver.h  PatternDatabase.h  Readme.md  Rubiks1DRepresentation.cpp  Rubiks3DRepresentation.cpp  RubiksBitBoardRepresentation.cpp  main.cpp
Pattern/CornerPatternDatabase/: CornerPatternDatabase.cpp  CornerPatternDatabase.h
Pattern/DB_Maker/: DB_maker.cpp  DB_maker.h
Pattern/Database/: Pattern_Database.cpp  Pattern_Database.h
Pattern/Permutation Indexer/: Math.cpp  Math.h  Permutation_Indexer.h
Pattern/nibble_array/: nibble.cpp  nibble.h
Patterns/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFS_Solver.h  DFS_Solver.h  Dummy.h  IDAStart_Solver.h  IDDFS_Solver.h
